Thu Jan 22 22:58:21 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tao/CodecFactory/IOP_Codec_include.pidl:
        * tao/Compression/Compression_include.pidl:
        * tao/Monitor/Monitor_include.pidl:
        * tao/ObjRefTemplate/ObjectReferenceTemplate_include.pidl:
        * tao/PI/PI_include.pidl:
        * tao/PI_Server/PI_Server_include.pidl:
        * tao/PortableServer/PortableServer_include.pidl:
        * tao/RTCORBA/RTCORBA_include.pidl:
        * tao/RTPortableServer/RTPortableServer_include.pidl:
        * tao/RTScheduling/RTScheduler_include.pidl:

          Due to a feature of the Visual Age C++ preprocessor, files
          that do not have any non-preprocessor non-comment text in them
          will not have #line values emitted.  This causes a problem for
          tao_idl as it uses the #line text to determine which include files
          to place in the generated files.  Not having the correct include
          files in the generated C++ files may cause compilation errors.  In
          order to get the preprocessor to emit the #line text for this
          .pidl file, I have added a dummy typedef inside a dummy module.
          This causes the right include files to be added to IDL generated
          source files.  Thanks to Chad Elliott for the initial implementation
          of this workaround.

Thu Jan 22 20:17:43 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/lex.yy.cpp.diff:

          Re-generated lex.yy.cpp from idl.ll (see previous commit)
          using flex 2.5.33.
          This required updating the diff to *not* change n from size_t to
          int, since having it as an int generates signed/unsigned warnings.

Thu Jan 22 20:15:54 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * TAO_IDL/fe/idl.ll:
        * orbsvcs/examples/ImR/Combined_Service/test.cpp:
        * tao/RTCORBA/RT_Invocation_Endpoint_Selectors.cpp:

          Fixed GCC 4.3 warnings.
